force-app/main/default/objects/AI_Interaction_Log__c/AI_Interaction_Log__c.object-meta.xml
<CustomObject>
    <description>Stores every conversational turn between a dealer and the Agentforce bot on WhatsApp or Web Chat. Gives approvers full context of the dealer intake conversation.</description>
    <label>AI Interaction Log</label>
    <nameField>
        <displayFormat>AIL-{0000}</displayFormat>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Interaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>