force-app/main/default/objects/AI_Interaction_Log__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated once the Agentforce session results in a Claim being created.</description>
    <label>Claim</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>AI Interaction Logs</relationshipLabel>
    <relationshipName>AI_Interaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>