force-app/main/default/objects/AI_Interaction_Log__c/fields/Dealer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AI Interaction Logs</relationshipLabel>
    <relationshipName>Contact_AI_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>