force-app/main/default/objects/AI_Interaction_Log__c/fields/Extracted_Part_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Part_Numbers__c</fullName>
    <description>Comma-separated part numbers mentioned by the dealer during the session.</description>
    <label>Extracted Part Numbers</label>
    <type>TextArea</type>
</CustomField>