force-app/main/default/objects/AI_Interaction_Log__c/fields/Extracted_VIN__c.field-meta.xml
<CustomField>
    <fullName>Extracted_VIN__c</fullName>
    <description>VIN extracted by Agentforce from the conversation, auto-populated on the Claim.</description>
    <label>Extracted VIN</label>
    <length>17</length>
    <type>Text</type>
</CustomField>