force-app/main/default/objects/AI_Interaction_Log__c/fields/Intent_Detected__c.field-meta.xml
<CustomField>
    <fullName>Intent_Detected__c</fullName>
    <label>Intent Detected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Claim</fullName>
            </value>
            <value>
                <fullName>Check Claim Status</fullName>
            </value>
            <value>
                <fullName>Upload Document</fullName>
            </value>
            <value>
                <fullName>Add Claim Item</fullName>
            </value>
            <value>
                <fullName>General Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>