force-app/main/default/objects/AI_Interaction_Log__c/fields/Message_Text__c.field-meta.xml
<CustomField>
    <fullName>Message_Text__c</fullName>
    <label>Message Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>