force-app/main/default/objects/AI_Interaction_Log__c/fields/Message_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Message_Timestamp__c</fullName>
    <label>Message Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>