force-app/main/default/objects/AI_Interaction_Log__c/fields/Sender_Type__c.field-meta.xml
<CustomField>
    <fullName>Sender_Type__c</fullName>
    <label>Sender Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
                <label>Agent (Agentforce)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>