force-app/main/default/objects/AI_Interaction_Log__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Unique identifier for the full conversation session. Groups all turns of one dealer conversation.</description>
    <externalId>true</externalId>
    <label>Session ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>