force-app/main/default/objects/AI_Interaction_Log__c/fields/Turn_Number__c.field-meta.xml
<CustomField>
    <fullName>Turn_Number__c</fullName>
    <description>Sequential order of this message within the session (1 = first message).</description>
    <label>Turn Number</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>